This is the first part of the issue 9115 to handle the overflow of table in a rubric question.

--- a/src/main/webapp/stylesheets/teammatesCommon.css
+++ b/src/main/webapp/stylesheets/teammatesCommon.css
@@ -1604,3 +1604,11 @@ Prevent Long URL From Breaking Out of Container
 .icon-info::before {
     content: '\e086';
 }
+
+.table {
+
+    display: block;
+    overflow-x: auto;
+
+}
+
